<resources>
    <string name="app_name">Ideation360</string>

    <string name="hiText">Hi</string>


    <string name="signUp">SIGN UP</string>
    <string name="login">LOG IN</string>
    <string name="loginSmall">Log in</string>
    <string name="forgotText"><u>forgot password</u></string>

    <string name="resetPassword">RESET PASSWORD</string>
    <string name="noWorry">No\n Worries</string>

    <string name="forgetPassword">Forgetting a password happens to \n the best of us. Shoot us an email \n and we will help you reset it.</string>

    <string name="registerText">Sign in</string>

    <string name="termsText"><u>I agree to the terms and conditions</u></string>
    <!--emailText-->

    <string name="emailText">email</string>
    <string name="passwordText">password</string>

    <!--registerText-->

    <string name="first">First name</string>
    <string name="last">Last name</string>
    <string name="compName">My Company\'s name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>


    <string name="ideationString">ideation360</string>


    <!--addFragment-->

    <string name="addidea">Add Idea</string>
    <string name="ideaTitle">Idea Title</string>
    <string name="descText">Description</string>
    <string name="addPhoto">Add photo</string>
    <string name="addVoice">Add voice</string>
    <string name="postText">POST IDEA</string>
    <string name="saveText">SAVE DRAFT</string>

    <string name="hometoptext">ideation360</string>
    <string name="myidea">My ideas</string>
    <string name="myprofile">My profile</string>
    <string name="notifications">Notifications</string>
    <string name="settings">Settings</string>
    <string name="newnoti">New</string>
    <string name="seennoti">Seen</string>
    <string name="profile">Profile</string>
    <string name="savedideas">Saved Ideas</string>
    <string name="campaigns">Campaigns</string>
    <string name="about">About</string>
    <string name="changelanguage">Change Language</string>
    <string name="logout">Logout</string>
    <string name="account">Account</string>
    <string name="emailtext"><u>a@gmail.com</u></string>
    <string name="updatephoto">UPDATE PHOTO</string>
    <string name="abouttop">About</string>
    <string name="whowe">Who we are</string>
    <string name="searchet_value">type what are you looking for...</string>

    <string name="abouttext">We are a group of passionate people who loves innovation! That is why we started ideation360. Our vision is to be the world’s leading platform for ideation.\n\nIf change is the new normal then speed is the new black and because of this the way of working with innovation is rapidly changing. With ideation360 we want to enable organisations to create breakthrough innovations by using all of their  employees, customers and partners creativity. Because we believe this is the only sustainable way to not only keep up with the phase of change but to use it to your advantage.</string>
    <string name="ideas"><u>IDEAS</u></string>
    <string name="people">people</string>
    <string name="search">Search</string>
    <string name="searchideas">IDEAS</string>
    <string name="searchcampaigns">campaigns</string>
    <string name="application_network_error">"Internet connection not available"</string>
    <string name="select_termcondition">Please select term and conditions.</string>
    <string name="noclient_avalibale">No Client available.</string>
    <string name="alreadyaccount">An account is already registered with this email.</string>
    <string name="home_emptyarraytext">Hey there, get started by adding an idea</string>
    <string name="invalidusername">Invalid username or password</string>
    <string name="enterusernameorpwd">Please enter username or password first</string>
    <string name="chooseclient">Choose client</string>
    <string name="allfieldsmandatory">All fields are required</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="cancel">Cancel</string>
    <string name="enterideatitle">Idea title field is required</string>
    <string name="myfirstcampaign">My First campaign</string>
    <string name="myfirstideation">My First ideation</string>
    <string name="your_rating">Your rating</string>
    <string name="currnt_averagerating">Current average rating:</string>
    <string name="comments">Comments:</string>
    <string name="Writeacomment">Write a comment</string>
    <string name="idea">Idea</string>
    <string name="sponser">Sponser</string>
    <string name="dayleft">days left</string>
    <string name="daysleft">days left</string>
    <string name="ideasc">Ideas</string>
    <string name="submitidea">Submit Idea</string>
    <string name="ideascolon">Ideas:</string>
    <string name="nosponsor_assigned">No sponsor assigned</string>
    <string name="campaign">Campaign</string>
    <string name="ideas_underline"><u>Ideas</u></string>
    <string name="campaigns_underline"><u>Campaigns</u></string>
    <string name="updateidea">Update Idea</string>
    <string name="editidea">Edit Idea</string>
    <string name="pimage_uploadsucc">Image uploaded successfully</string>
    <string name="servererror">server error</string>
    <string name="selectimagefirst">Please select an image first</string>
    <string name="spanish">Spanish</string>
    <string name="swedish">Swedish</string>
    <string name="english">English</string>

    <string name="noresultfound">No result found</string>
    <string name="ideasavedsuccess">Idea saved successfully</string>
    <string name="ideasubmitted">idea submitted</string>
    <string name="ideassubmitted">ideas submitted</string>
    <string name="myprofile_ideas">ideas</string>
    <string name="hascommented">has commented your idea</string>
    <string name="gaveyouridea">gave your idea</string>
    <string name="stars">stars</string>
    <string name="YourIdea">Your Idea</string>
    <string name="wasaddedtothecluster">was added to the cluster</string>
    <string name="CongratsyourIdea">Congrats, your idea</string>
    <string name="isinanexperiment">is in an experiment</string>
    <string name="wasinanexperiment">was in an experiment which validated the hypotheses</string>
    <string name="isnowpartofaproject">is now part of a project</string>
    <string name="freezebox">is now placed in the freeze box</string>
    <string name="start">Start</string>
    <string name="Stop">Stop</string>
    <string name="loading">Loading...</string>
    <string name="playrecording">Play Recording</string>
    <string name="termcondition">Term &amp; Conditions</string>
    <string name="cmntadded">Comment Added</string>
    <string name="listenrecording">Listen recording</string>
    <string name="choosetore">Choose to re-record</string>
    <string name="noaccount_found">No account found</string>
    <string name="allfieldrequire">All fields are required</string>
    <string name="pwdshouldbe5">Password should contain at least 5 character</string>
    <string name="wantlogout">Want to logout?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="ratings">Ratings</string>Calificaciones
</resources>
